istio-advanced-rules/istio-networking/destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
  namespace: william-store-springboot
spec:
  host: customer
  subsets:
    - labels:
        version: v1
      name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: preference
  namespace: william-store-springboot
spec:
  host: preference
  subsets:
    - labels:
        version: v1
      name: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommendation
  namespace: william-store-springboot
spec:
  host: recommendation
  subsets:
    - labels:
        version: v1
      name: v1
